--- a/include/preface.tex
+++ b/include/preface.tex
@@ -1,7 +1,7 @@
 \chapter{Preface}
 
-This book is an introduction to meta-logic, aimed especially at
-students of computer science and philosophy. ``Meta-logic'' is
+This book is an introduction to metalogic, aimed especially at
+students of computer science and philosophy. ``Metalogic'' is
 so-called because it is the discipline that studies logic itself.
 Logic proper is concerned with canons of valid inference, and its
 symbolic or formal version presents these canons using formal
@@ -26,7 +26,7 @@ here---how to give semantics for formal languages, how to prove
 results about formal languages, how to investigate the properties of
 formal languages---are applicable in those cases as well.
 
-Like any discipline, meta-logic both has a set of results or facts,
+Like any discipline, metalogic both has a set of results or facts,
 and a store of methods and techniques, and this text covers both.
 Some students won't need to know some of the results we discuss
 outside of this course, but they will need and use the methods we use
@@ -44,7 +44,7 @@ are recommended study---in some cases even required---for students of
 computer science and philosophy.
 
 The material is divided into three parts. Part~1 concerns
-itself with the theory of sets. Logic and meta-logic is historically
+itself with the theory of sets. Logic and metalogic is historically
 connected very closely to what's called the ``foundations of
 mathematics.''  Mathematical foundations deal with how ultimately
 mathematical objects such as integers, rational, and real numbers,
@@ -95,8 +95,8 @@ In the second part we turn to first-order logic. We will define the
 language of first-order logic and its semantics, i.e., what
 first-order structures are and when a sentence of first-order logic is
 true in a structure. This will enable us to do two important things:
-(1) We can define, with mathematical precision, when a sentence is a
-logical consequence of another. (2) We can also consider how the
+(1)`We can define, with mathematical precision, when a sentence is a
+logical consequence of another. (2)~We can also consider how the
 relations that make up a first-order structure are
 described---characterized---by the sentences that are true in them.
 This in particular leads us to a discussion of the axiomatic method,
