--- a/include/summary-3.tex
+++ b/include/summary-3.tex
@@ -1,12 +1,12 @@
-A \emph{function}~$f\colon X \to Y$ maps every element of the
-\emph{domain}~$X$ to a unique element of the \emph{codomain}~$Y$. If
-$x \in X$, we call the $y$ that~$f$ maps $x$ to the
-\emph{value}~$f(x)$ of $f$~for \emph{argument}~$x$. If $X$ is a set of
+A \emph{function}~$f\colon A \to B$ maps every element of the
+\emph{domain}~$A$ to a unique element of the \emph{codomain}~$B$. If
+$x \in A$, we call the $y$ that~$f$ maps $x$ to the
+\emph{value}~$f(x)$ of $f$~for \emph{argument}~$x$. If $A$ is a set of
 pairs, we can think of the function~$f$ as taking two arguments. The
-\emph{range}~$\ran{f}$ of~$f$ is the subset of~$Y$ that consists of
+\emph{range}~$\ran{f}$ of~$f$ is the subset of~$B$ that consists of
 all the values of~$f$.
 
-If $\ran{f} = Y$ then $f$ is called \emph{surjective}. The value~$f(x)$
+If $\ran{f} = B$ then $f$ is called \emph{surjective}. The value~$f(x)$
 is unique in that $f$ maps $x$ to only one $f(x)$, never more than one.
 If $f(x)$ is also unique in the sense that no two different arguments
 are mapped to the same value, $f$ is called \emph{injective}. Functions
@@ -19,8 +19,8 @@ functions are injective, and of surjective functions are surjective,
 and $(f^{-1} \circ f)$ is the identity function.
 
 If we relax the requirement that $f$ must have a value for every $x
-\in X$, we get the notion of a \emph{partial functions}. If $f\colon
-X \pto Y$ is partial, we say $f(x)$ is \emph{defined},
+\in A$, we get the notion of a \emph{partial functions}. If $f\colon
+A \pto B$ is partial, we say $f(x)$ is \emph{defined},
 $f(x) \fdefined$ if $f$ has a value for argument~$x$, and otherwise we
 say that $f(x)$ is \emph{undefined}, $f(x) \fundefined$. Any (partial)
 function~$f$ is associated with the \emph{graph}~$R_f$ of $f$, the
