--- a/include/summary-4.tex
+++ b/include/summary-4.tex
@@ -1,10 +1,10 @@
-The size of a set~$X$ can be measured by a natural number if the set
+The size of a set~$A$ can be measured by a natural number if the set
 is finite, and sizes can be compared by comparing these numbers. If sets
 are infinite, things are more complicated. The first level of
-infinity is that of \emph{countably infinite} sets. A set~$X$ is
+infinity is that of \emph{countably infinite} sets. A set~$A$ is
 countable if its elements can be arranged in an \emph{enumeration}, a
-one-way infinite, possibly gappy list, i.e., when there is a
-surjective function~$f\colon \PosInt \pto X$. It is countably infinite
+one-way infinite list, i.e., when there is a
+surjective function~$f\colon \PosInt \to A$. It is countably infinite
 if it is countable but not finite. Cantor's \emph{zig-zag method}
 shows that the sets of pairs of elements of countably infinite sets is
 also countable; and this can be used to show that even the set of
@@ -14,24 +14,23 @@ There are, however, infinite sets that are not countable: these sets
 are called \emph{uncountable}. There are two ways of showing that a
 set is uncountable: directly, using a \emph{diagonal argument}, or by
 \emph{reduction}. To give a diagonal argument, we assume that the
-set~$X$ in question is countable, and use a hypothetical enumeration
-to define an element of~$X$ which, by the very way we define it, is
+set~$A$ in question is countable, and use a hypothetical enumeration
+to define an element of~$A$ which, by the very way we define it, is
 guaranteed to be different from every element in the enumeration. So
-the enumeration can't be an enumeration of all of~$X$ after all, and
-we've shown that no enumeration of~$X$ can exist. A reduction shows
-that $X$ is uncountable by associating every element of~$X$ with an
-element of some known uncountable set~$Y$ in a surjective way. If
-this is possible, than a hypothetical enumeration of $X$ would yieled
-an enumeration of~$Y$. Since $Y$ is uncountable, no enumeration of~$X$
+the enumeration can't be an enumeration of all of~$A$ after all, and
+we've shown that no enumeration of~$A$ can exist. A reduction shows
+that $A$ is uncountable by associating every element of~$A$ with an
+element of some known uncountable set~$B$ in a surjective way. If
+this is possible, than a hypothetical enumeration of $A$ would yield
+an enumeration of~$B$. Since $B$ is uncountable, no enumeration of~$A$
 can exist.
 
-In general, infinite sets can be compared sizewise: $X$ and $Y$ are
+In general, infinite sets can be compared sizewise: $A$ and $B$ are
 the same size, or \emph{equinumerous}, if there is a bijection between
-them. We can also define that $X$ is no larger than~$Y$ ($\card{X} \le
-\card{Y}$) if there is an injective function from $X$ to
-$Y$. By the Schr\"oder-Bernstein Theorem, this in fact provides a
-sizewise order of infinite sets. Finally, \emph{Cantor's theorem}
-says that for any $X$, $\card{X} < \card{\Pow{X}}$. This is a
-generalization of our result that $\Pow{\PosInt}$ is uncountable, and
-shows that there are not just two, but infinitely many levels of
-infinity.
+them. We can also define that $A$ is no larger than~$B$
+($\cardle{A}{B}$) if there is an injective function from $A$ to~$B$.
+By the Schr\"oder-Bernstein Theorem, this in fact provides a sizewise
+order of infinite sets. Finally, \emph{Cantor's theorem} says that for
+any $A$, $\cardless{A}{\Pow{A}}$. This is a generalization of our
+result that $\Pow{\PosInt}$ is uncountable, and shows that there are
+not just two, but infinitely many levels of infinity.
