--- a/phil379-metadata.tex
+++ b/phil379-metadata.tex
@@ -3,6 +3,6 @@
 \setOLPbooktitle[Sets, Logic\rlap{,}\\ Computation]{Sets, Logic, Computation}
 \setOLPbooksubtitle{An Open Introduction to Metalogic}
 \setOLPauthor{Richard Zach}
-\setOLPbookversion{Fall 2019\textalpha}{F19\textalpha}
+\setOLPbookversion{Fall 2019}{F19}
 \setOLPsourcelink{https://github.com/rzach/phil379}
 \setOLPauthorlink{http://richardzach.org/}
