--- a/phil379-print.tex
+++ b/phil379-print.tex
@@ -3,13 +3,12 @@
 % driver file phil379-print.tex to produce the Logic III textbook for
 % printing on KDPs's quarto stock.
 
-\pdfminorversion=3
+%\pdfminorversion=3
 
 \documentclass[print]{../../sty/open-logic-book}
 
 \usepackage[nonumberlist,toc,style=index]{glossaries}
 \makeglossaries
-
 
 \def\oljobname{phil379}
 
