--- a/include/summary-1.tex
+++ b/include/summary-1.tex
@@ -1,23 +1,24 @@
 A \emph{set} is a collection of objects, the elements of the set. We
-write $x \in X$ if $x$~is an element of~$X$. Sets are
+write $x \in A$ if $x$~is an element of~$A$. Sets are
 \emph{extensional}---they are completely determined by their elements.
 Sets are specified by \emph{listing} the elements explicitly or by
 giving a property the elements share
 (\emph{abstraction}). Extensionality means that the order or way of
 listing or specifying the elements of a set doesn't matter. To prove
-that $X$ and~$Y$ are the same set ($X = Y$) one has to prove that
+that $A$ and~$B$ are the same set ($A = B$) one has to prove that
 every element of~$X$ is an element of~$Y$ and vice versa.
 
-Important sets include the natural ($\Nat$), integer ($\Int$), rational
-($\Rat$), and real ($\Real$) numbers, but also \emph{strings} ($X^*$)
-and infinite \emph{sequences} ($X^\omega$) of objects. $X$ is a
-\emph{subset} of $Y$, $X \subseteq Y$, if every element of $X$ is also
-one of~$Y$. The collection of all subsets of a set~$Y$ is itself a
-set, the \emph{power set} $\Pow{Y}$ of~$Y$. We can form the
-\emph{union} $X \cup Y$ and \emph{intersection} $X \cap Y$ of sets. An
-\emph{ordered pair} $\tuple{x, y}$ consists of two objects $x$ and~$y$, but in
-that specific order. The pairs $\tuple{x, y}$ and $\tuple{y, x}$ are
-different pairs (unless $x = y$). The set of all pairs $\tuple{x, y}$
-where $x \in X$ and $y\in Y$ is called the \emph{Cartesian product}~$X
-\times Y$ of $X$ and $Y$. We write $X^2$ for $X \times X$; so for
-instance $\Nat^2$ is the set of pairs of natural numbers.
+Important sets include the natural ($\Nat$), integer ($\Int$),
+rational ($\Rat$), and real ($\Real$) numbers, but also \emph{strings}
+($X^*$) and infinite \emph{sequences} ($X^\omega$) of objects. $A$~is
+a \emph{subset} of $B$, $A \subseteq B$, if every element of $A$ is
+also one of~$B$. The collection of all subsets of a set~$B$ is itself
+a set, the \emph{power set} $\Pow{B}$ of~$B$. We can form the
+\emph{union} $A \cup B$ and \emph{intersection} $A \cap B$ of sets. An
+\emph{ordered pair} $\tuple{x, y}$ consists of two objects $x$
+and~$y$, but in that specific order. The pairs $\tuple{x, y}$ and
+$\tuple{y, x}$ are different pairs (unless $x = y$). The set of all
+pairs $\tuple{x, y}$ where $x \in A$ and $y \in B$ is called the
+\emph{Cartesian product}~$A \times B$ of $A$ and $B$. We write $A^2$
+for $A \times A$; so for instance $\Nat^2$ is the set of pairs of
+natural numbers.
