--- a/include/summary-2.tex
+++ b/include/summary-2.tex
@@ -1,7 +1,7 @@
-A \emph{relation}~$R$ on a set~$X$ is a way of relating elements
-of~$X$. We write $Rxy$ if the relation \emph{holds} between $x$
+A \emph{relation}~$R$ on a set~$A$ is a way of relating elements
+of~$A$. We write $Rxy$ if the relation \emph{holds} between $x$
 and~$y$. Formally, we can consider $R$ as the sets of pairs
-$\tuple{x,y} \in X^2$ such that~$Rxy$. Being less than, greater than,
+$\tuple{x,y} \in A^2$ such that~$Rxy$. Being less than, greater than,
 equal to, evenly dividing, being the same length as, a subset of, and the
 same size as are all important examples of relations (on
 sets of numbers, strings, or of sets). \emph{Graphs} are a general way
@@ -19,7 +19,7 @@ properties are \emph{equivalence relations}. A relation is
 guarantees~$x=y$. \emph{Partial orders} are those relations that are
 reflexive, anti-symmetric, and transitive. A \emph{linear order} is
 any partial order which satisfies that for any $x$ and~$y$, either
-$Rxy$ or $Ryx$. (Generally, a relation with this property is
+$Rxy$ or $x=y$ or $Ryx$. (Generally, a relation with this property is
 \emph{connected}).
 
 Since relations are sets (of pairs), they can be operated on as sets
