--- a/slc-config.sty
+++ b/slc-config.sty
@@ -1,4 +1,4 @@
-% Configuration file for Logic II textbook
+% Configuration file for Sets, Logic, Computation textbook
 
 % Let's be unpretentious and use A, B, C, etc. for formulas ...
 
