--- a/slc-metadata.tex
+++ b/slc-metadata.tex
@@ -1,8 +1,8 @@
-% Metadata for phil379
+% Metadata for slc
 
 \setOLPbooktitle[Sets, Logic\rlap{,}\\ Computation]{Sets, Logic, Computation}
 \setOLPbooksubtitle{An Open Introduction to Metalogic}
 \setOLPauthor{Richard Zach}
 \setOLPbookversion{Fall 2019}{F19}
-\setOLPsourcelink{https://github.com/rzach/phil379}
+\setOLPsourcelink{https://github.com/rzach/sets-logic-computation}
 \setOLPauthorlink{http://richardzach.org/}
