--- a/slc-print-cover.tex
+++ b/slc-print-cover.tex
@@ -1,4 +1,4 @@
-% phil379-print-cover.tex
+% slc-print-cover.tex
 
 % make a cover PDF for KDP Crown Quarto booksize.
 
@@ -8,7 +8,7 @@
 
 \def\olpath{../../}
 
-\input{phil379-metadata.tex}
+\input{slc-metadata.tex}
 
 \setOLPpagenumber{388}
 
