--- a/slc.tex
+++ b/slc.tex
@@ -1,6 +1,6 @@
-% phil379.tex
+% slc.tex
 %
-% driver file phil379.tex to produce text
+% driver file slc.tex to produce text
 
 \preto\OLEndChapterHook{\IfFileExists{include/summary-\thechapter}
         {\section*{Summary}\addcontentsline{toc}{section}{Summary}
@@ -67,9 +67,6 @@
 
 \stopproblems
 \def\ifproblems#1{}
-
-\def\captionnamefont{\sffamily\color{leadbeater}}
-\def\captiontitlefont{\sffamily\color{leadbeater}}
 
 \def\figurename{Fig.}
 \setlength{\olphotowidth}{.45\textwidth}
