link to slc.openlogicproject.org

--- a/slc-metadata.tex
+++ b/slc-metadata.tex
@@ -4,5 +4,5 @@
 \setOLPbooksubtitle{An Open Introduction to Metalogic}
 \setOLPauthor{Richard Zach}
 \setOLPbookversion{Fall 2019}{F19}
-\setOLPsourcelink{https://github.com/rzach/sets-logic-computation}
-\setOLPauthorlink{http://richardzach.org/}
+\setOLPsourcelink{https://slc.openlogicproject.org/}
+\setOLPauthorlink{https://richardzach.org/}
