--- a/slc-config.sty
+++ b/slc-config.sty
@@ -8,14 +8,13 @@
 
 \DeclareMathAlphabet{\mathbi}{OT1}{pplx}{b}{it}
 
-\DeclareDocumentCommand \Struct { m }{\mathbi #1}
+\DeclareDocumentCommand \Struct { m }{\applytofirst{\mathbi}{#1}}
 
 % - `\TMblank` - symbol for a blank
 \DeclareDocumentMacro \TMblank {\sqcup}
 
 % - `\TMstroke` - single stroke symbol on tape
 \DeclareDocumentMacro \TMstroke {I}
-
 
 % I think I like ``countable'' and ``uncountable'' better?
 
