--- a/include/summary-5.tex
+++ b/include/summary-5.tex
@@ -1,19 +1,19 @@
 A \emph{first-order language} consists of \emph{constant},
 \emph{function}, and \emph{predicate} symbols. Function and constant
-symbols take a specified number of arguments. In the \emph{language
-  of arithmetic}, e.g., we have a single constant symbol~$\Obj 0$, one
+symbols take a specified number of arguments. In the \emph{language of
+arithmetic}, e.g., we have a single constant symbol~$\Obj 0$, one
 1-place function symbol $\prime$, two 2-place function symbols~$+$ and
 $\times$, and one 2-place predicate symbol~$<$. From \emph{variables}
 and constant and function symbols we form the \emph{terms} of a
 language. From the terms of a language together with its predicate
 symbol, as well as the \emph{identity symbol}~$\eq$, we form the
-  \emph{atomic formulas}. And in turn from them, using the logical
-  connectives $\lnot$, $\lor$, $\land$, $\lif$, $\liff$ and the
-  quantifiers $\lforall$ and $\lexists$ we form its formulas. Since
-  we are careful to always include necessary parentheses in the
-  process of forming terms and formulas, there is always exactly one
-  way of reading a formula. This makes it possible to define things by
-  induction on the structure of formulas.
+\emph{atomic formulas}. And in turn from them, using the logical
+connectives $\lnot$, $\lor$, $\land$, $\lif$, $\liff$ and the
+quantifiers $\lforall$ and $\lexists$ we form its formulas. Since we
+are careful to always include necessary parentheses in the process of
+forming terms and formulas, there is always exactly one way of reading
+a formula. This makes it possible to define things by induction on the
+structure of formulas.
 
 Occurrences of variables in formulas are sometimes governed by a
 corresponding quantifier: if a variable occurs in the \emph{scope} of
@@ -30,11 +30,11 @@ symbols are interpreted by functions and relation symbols by relation
 on the domain. A function from the set of variables to the domain is
 a \emph{variable assignment}. The relation of \emph{satisfaction}
 relates structures, variable assignments and formulas;
-$\Sat{M}[s]{!A}$ is defined by induction on the structure of~$!A$.
-$\Sat{M}[s]{!A}$ only depends on the interpretation of the symbols
+$\Sat{M}{!A}[s]$ is defined by induction on the structure of~$!A$.
+$\Sat{M}{!A}[s]$ only depends on the interpretation of the symbols
 actually occurring in~$!A$, and in particular does not depend on $s$
 if $!A$ contains no free variables. So if $!A$ is a sentence,
-$\Sat{M}{!A}$ if $\Sat{M}[s]{!A}$ for any (or all)~$s$.
+$\Sat{M}{!A}$ if $\Sat{M}{!A}[s]$ for any (or all)~$s$.
 
 The satisfaction relation is the basis for all semantic notions. A
 sentence is \emph{valid}, $\Sat{{}}{!A}$, if it is satisfied in every
