Starting 2021 alpha version

--- a/slc-screen.tex
+++ b/slc-screen.tex
@@ -20,7 +20,7 @@
 % courses/sets-logic-computation/, so the main directory is two
 % levels up.
 
-\newcommand{\olpath}{../../}
+\newcommand{\olpath}{../..}
 
 % load all the Open Logic definitions. This will also load the
 % local definitions in open-logic-sample-config.sty
