Fix typo in preface

--- a/include/preface.tex
+++ b/include/preface.tex
@@ -122,7 +122,7 @@ German mathematician David Hilbert famously held the view that
 consistency (i.e., freedom from contradiction) is all that mathematical
 existence requires. In other words, whenever a mathematician can
 coherently describe a structure or class of structures, then they
-should be be entitled to believe in the existence of such structures.
+should be entitled to believe in the existence of such structures.
 At the time, many found this idea preposterous: just because you can
 describe a structure without contradicting yourself, it surely does
 not follow that such a structure actually exists. But that is exactly
