add greek alphabet as appendix

--- a/slc.tex
+++ b/slc.tex
@@ -91,6 +91,8 @@
 
 \olimport*[history/biographies]{ernst-zermelo}
 
+\olimport*[reference/greek-alphabet]{greek-alphabet}
+
 \backmatter
 
 \glsaddall
