updates for F2021 (new chapters/sumamries)

--- a/include/summary-8.tex
+++ b/include/summary-8.tex
@@ -1,34 +1,30 @@
-\emph{Proof systems} provide purely syntactic methods for
-characterizing consequence and compatibility between sentences.
-The \emph{sequent calculus} is one such proof
-system. A \emph{derivation} in it consists of a tree of sequents (a
-sequent $\Gamma \Sequent \Delta$ consists of two sequences of formulas
-separated by~$\Sequent$). The topmost sequents in a derivation
-are \emph{initial sequents} of the form $!A \Sequent !A$.  All other
-sequents, for the derivation to be correct, must be correctly
-justified by one of a number of \emph{inference rules}. These come in
-pairs; a rule for operating on the left and on the right side of a
-sequent for each connective and quantifier. For instance, if a sequent
-$\Gamma \Sequent \Delta, !A \lif !B$ is justified by the
-$\RightR{\lif}$ rule, the preceding sequent (the \emph{premise}) must
-be $!A, \Gamma \Sequent \Delta, !B$. Some rules also allow the order
-or number of sentences in a sequent to be manipulated, e.g.,
-the \RightR{\Exchange} rule allows two formulas on the right side of a
-sequent to be switched.
+Sets of sentences in a sense describe the structures in which they are
+jointly true; these structures are their \emph{models}. Conversely,
+if we start with a structure or set of structures, we might be
+interested in the set of sentences they are models of, this is the
+\emph{theory} of the structure or set of structures. Any such set of
+sentences has the property that every sentence entailed by them is
+already in the set; they are \emph{closed}. More generally, we call a
+set $\Gamma$ a theory if it is closed under entailment, and say
+$\Gamma$ is \emph{axiomatized} by~$\Delta$ is $\Gamma$ consists of all
+sentences entailed by~$\Delta$.
 
-If there is a derivation of the sequent $\quad \Sequent !A$, we say
-$!A$ is a \emph{theorem} and write~$\Proves !A$. If there is a
-derivation of $\Gamma_0 \Sequent !A$ where every $!B$ in $\Gamma_0$ is
-in~$\Gamma$, we say $!A$ is \emph{derivable from}~$\Gamma$ and write
-$\Gamma \Proves !A$. If there is a derivation of
-$\Gamma_0 \Sequent \quad$ where every $!B$ in $\Gamma_0$ is
-in~$\Gamma$, we say $\Gamma$ is \emph{inconsistent}, otherwise
-\emph{consistent}. These notions are interrelated, e.g., $\Gamma
-\Proves !A$ iff $\Gamma \cup \{\lnot !A\}$ is inconsistent. They are
-also related to the corresponding semantic notions, e.g., if $\Gamma
-\Proves !A$ then $\Gamma \Entails !A$. This property of proof
-systems---what can be derived from $\Gamma$ is guaranteed to be
-entailed by~$\Gamma$---is called \emph{soundness}. The \emph{soundness
-theorem} is proved by induction on the length of derivations, showing
-that each individual inference preserves validity of the conclusion
-sequent provided the premise sequents are valid.
+Mathematics yields many examples of theories, e.g., the theories of
+linear orders, of groups, or theories of arithmetic, e.g., the theory
+axiomatized by Peano's axioms. But there are many examples of
+important theories in other disciplines as well, e.g., relational
+databases may be thought of as theories, and metaphysics concerns
+itself with theories of parthood which can be axiomatized.
+
+One significant question when setting up a theory for study is whether
+its language is expressive enough to allow us to formulate everything
+we want the theory to talk about, and another is whether it is strong
+enough to prove what we want it to prove. To \emph{express} a
+relation we need a formula with the requisite number of free
+variables. In \emph{set theory}, we only have $\in$ as a relation
+symbol, but it allows us to express $x \subseteq y$ using
+$\lforall[u][(u \in x \lif u \in y)]$. \emph{Zermelo-Fraenkel set
+  theory}~$\Log{ZFC}$, in fact, is strong enough to both express
+(almost) every mathematical claim and to (almost) prove every
+mathematical theorem using a handful of axioms and a chain of
+increasingly complicated definitions such as that of~$\subseteq$.
