--- a/slc-print-cover.tex
+++ b/slc-print-cover.tex
@@ -8,7 +8,7 @@
 
 \input{slc-metadata.tex}
 
-\setOLPpagenumber{388}
+\setOLPpagenumber{426}
 
 \definecolor{OLPcolor}{RGB}{248,154,14}
 \definecolor{OLPdkcolor}{RGB}{104,65,6}
@@ -16,7 +16,7 @@
 
 \begin{document}
 
-\OLPprintcover{\hfill\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/cantor-circle.pdf}\hfill{}
+\OLPprintcover{\hfill\hspace{.29\textwidth}\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/cantor-circle.pdf}\hfill{}
 
 \hfill{}
 \includegraphics[width=.29\textwidth]{\olpath/assets/portraits/goedel-circle.pdf}
@@ -25,6 +25,6 @@
 \hfill{}
 
 \hfill{}
-\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/noether-circle.pdf}\hfill{}
+\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/noether-circle.pdf}\hspace{.29\textwidth}\hfill{}
 }
 \end{document}
