--- a/slc-screen.tex
+++ b/slc-screen.tex
@@ -42,7 +42,7 @@
 \begin{document}
 \raggedbottom
 
-\OLPscreencover{\hfill\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/cantor-circle.pdf}\hfill{}
+\OLPscreencover{\hfill\hspace{.29\textwidth}\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/cantor-circle.pdf}\hfill{}
 
 \hfill{}
 \includegraphics[width=.29\textwidth]{\olpath/assets/portraits/goedel-circle.pdf}
@@ -51,7 +51,7 @@
 \hfill{}
 
 \hfill{}
-\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/noether-circle.pdf}\hfill{}
+\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/noether-circle.pdf}\hspace{.29\textwidth}\hfill{}
 }
 
 % Now load the actual text
