add notes for instructors

--- a/include/preface.tex
+++ b/include/preface.tex
@@ -185,3 +185,33 @@ also make extensive use of the method of \emph{induction} to prove
 results. Two chapters of the appendix are devoted to these proof
 methods.
 
+\paragraph{Notes for instructors} The material in this book is
+suitable for a semester-long second course  in formal logic. I cover
+it in 12 weeks in Logic~II taught at the University of Calgary,
+although I don't cover everything in as much detail as there is in
+this book. For instance, I typically only talk about natural
+deduction, and leave out detailed proofs of completeness for identity.
+Students have taken Logic~I, typically taught from
+\emph{\href{https://forallx.openlogicproject.org}{forall x: Calgary}},
+which uses the same natural deduction rules, except in Fitch format.
+
+The most recent version of this book is available in PDF at
+\href{https://slc.openlogicproject.org}{slc.openlogicproject.org}, but
+changes frequently.  The CC BY license gives you the right to download
+and distribute the book yourself. In order to ensure that all your
+students have the same version of the book throughout the term you're
+using it, you should do so: upload the PDF you decide to use to your
+LMS rather than merely give your students the link. You are also free
+to have the PDFs printed by your bookstore, but some bookstores will
+be able to purchase and stock the softcover books available on Amazon.
+
+The syntax, semantics, and proof systems for first-order logic are
+supported by Graham Leach-Krouses's free, online logic teaching
+software application \emph{Carnap}
+(\href{https://carnap.io}{carnap.io}). This allows for submission and
+automated marking of exercises such as natural deduction and sequent
+calculus !!{derivation}s, giving structures for simple theories, and
+symbolization exercises.  There is also a Turing machine simulator at
+\href{https://turing.openlogicproject.org}{turing.openlogicproject.org}
+that can be used to illustrate the material in \olref[tur][][]{part}.
+The examples there are available pre-loaded in the simulator.
