--- a/slc-screen.tex
+++ b/slc-screen.tex
@@ -6,6 +6,8 @@
 
 \documentclass[screen]{../../sty/open-logic-book}
 
+\usepackage[all]{nowidow}
+
 \definecolor{OLPcolor}{RGB}{248,154,14}
 \definecolor{OLPdkcolor}{RGB}{104,65,6}
 \definecolor{OLPltcolor}{RGB}{248,203,137}
