--- a/slc-metadata.tex
+++ b/slc-metadata.tex
@@ -3,6 +3,6 @@
 \setOLPbooktitle[Sets, Logic\rlap{,}\\ Computation]{Sets, Logic, Computation}
 \setOLPbooksubtitle{An Open Introduction to Metalogic}
 \setOLPauthor{Richard Zach}
-\setOLPbookversion{Fall 2021$\alpha$}{F21$\alpha$}
+\setOLPbookversion{Fall 2021}{F21}
 \setOLPsourcelink{https://slc.openlogicproject.org/}
 \setOLPauthorlink{https://richardzach.org/}
