class does running heads now

--- a/include/preface.tex
+++ b/include/preface.tex
@@ -1,4 +1,4 @@
-\chapter{Preface}\markboth{Preface}{Preface}
+\chapter{Preface}
 
 This book is an introduction to metalogic, aimed especially at
 students of computer science and philosophy. ``Metalogic'' is
