--- a/proof-recipes.tex
+++ b/proof-recipes.tex
@@ -13,11 +13,11 @@
 
 \item Question: Show that $\Sigma \Entails !A$.
 
-Proof outline: Let $v$ be a truth assignment satisfying all of $\Sigma$. Wewill show that $Val(!A) = T$.
+Proof outline: Let $v$ be a truth assignment satisfying all of $\Sigma$. We will show that $Val(!A) = T$.
 
     [...]
 
-Thus $Val(!A) = T$. So any truth assignment satisfying all of $\Sigma$ alsosatisfies $!A$, which implies that $\Sigma \Entails !A$.
+Thus $Val(!A) = T$. So any truth assignment satisfying all of $\Sigma$ also satisfies $!A$, which implies that $\Sigma \Entails !A$.
 
 \item Question: Show that $\Sigma \Entails/ !A$.
 
