--- a/include/glossary.tex
+++ b/include/glossary.tex
@@ -347,7 +347,7 @@
 
 \newglossaryentry{soundness} {
   name=soundness, 
-  description={Property of a !!{derivation} system: it is sound if whenever
+  description={Property of !!a{derivation} system: it is sound if whenever
     $\Gamma \Proves !A$ then $\Gamma \Entails !A$ (see
     \olref[fol][seq][sou]{sec} and \olref[fol][ntd][sou]{sec})} }
 
@@ -419,7 +419,7 @@
 
 \newglossaryentry{completeness} {
   name=completeness, 
-  description={Property of a !!{derivation} system; it is complete if, whenever
+  description={Property of !!a{derivation} system; it is complete if, whenever
     $\Gamma$ entails $!A$, then there is also a {derivation} that
     establishes $\Gamma \Proves !A$; equivalently, iff
     every \gls{consistent} set of sentences is \gls{satisfiable}
